--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "study-vending-machine"
 version = "0.1.0"
 description = ""
-authors = ["r-yamamoto <r-yamamoto@creationline.com>"]
+authors = ["re2osushi8888 <re.2osushi8888@gmail.com>"]
 readme = "README.md"
 packages = [{include = "study_vending_machine"}]
 
