--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,17 +22,20 @@
 							"oderwat.indent-rainbow",
 							"usernamehw.errorlens",
 							"shardulm94.trailing-spaces",
-							"ms-python.isort",
-							"ms-python.black-formatter",
-							"ms-python.flake8",
-							"ms-python.mypy-type-checker"
+							"ms-python.mypy-type-checker",
+							"charliermarsh.ruff"
 						],
 						"settings": {
 							"editor.formatOnSave": true,
-							"editor.defaultFormatter": "ms-python.black-formatter",
-							"python.formatting.blackArgs": [
-								"skip-string-normalization",
-								"--line-length=120"
+          		"editor.defaultFormatter": "charliermarsh.ruff",
+							"[python]": {
+								"python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+								"mypy-type-checker.path": ["${workspaceFolder}/.venv/bin/mypy"],
+								"mypy-type-checker.args": ["--config=${workspaceFolder}/pyproject.toml"]
+							},
+							"python.analysis.extraPaths": [
+								"${workspaceFolder}",
+								"${workspaceFolder}/.venv/lib/python3.12/site-packages"
 							]
 						}
         }
