--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,11 +27,18 @@
 						],
 						"settings": {
 							"editor.formatOnSave": true,
-          		"editor.defaultFormatter": "charliermarsh.ruff",
 							"[python]": {
+								"editor.formatOnSave": true,
+								"editor.defaultFormatter": "charliermarsh.ruff",
+								"editor.codeActionsOnSave": {
+									"source.organizeImports": "always",
+									"source.fixAll.ruff": "always"
+								},
 								"python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
 								"mypy-type-checker.path": ["${workspaceFolder}/.venv/bin/mypy"],
-								"mypy-type-checker.args": ["--config=${workspaceFolder}/pyproject.toml"]
+								"mypy-type-checker.args": ["--config=${workspaceFolder}/pyproject.toml"],
+								"ruff.nativeServer": "on",
+								"ruff.configuration": "${workspaceFolder}/pyproject.toml"
 							},
 							"python.analysis.extraPaths": [
 								"${workspaceFolder}",
