--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,25 @@ requires-python = ">=3.12"
 dependencies = [
     "ruff>=0.6.8",
 ]
+
+[tool.ruff]
+line-length = 120
+indent-width = 4
+src = ["src", "test"]
+exclude = [
+    ".git",
+    ".git-rewrite",
+    ".mypy_cache",
+    ".ruff_cache",
+    ".venv",
+]
+
+[tool.ruff.lint]
+select = [
+  "E", # black
+  "F", # Flake8
+  "I", # isort
+]
+
+[tool.ruff.format]
+quote-style = "single"
