--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "python-dev-container"
 version = "0.1.0"
+python = "3.12"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
 dependencies = [
     "ruff>=0.6.8",
 ]
