--- a/turborepo-lab/docker-compose.local.yml
+++ b/turborepo-lab/docker-compose.local.yml
@@ -10,7 +10,7 @@ services:
         echo "start..."
         sleep infinity
     volumes:
-      - ./:/workspace:cached
+      - ../:/workspace:cached
     ports:
       - 3000:3000
       - 5173:5173
