--- a/turborepo-lab/nestjs-prisma/apps/api/package.json
+++ b/turborepo-lab/nestjs-prisma/apps/api/package.json
@@ -32,6 +32,7 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@repo/database": "workspace:*",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
@@ -51,7 +52,9 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "^8.20.0",
+    "vite": "^6.2.6",
+    "vite-plugin-node": "^5.0.1"
   },
   "jest": {
     "moduleFileExtensions": [
