--- a/hjq/hjq.cabal
+++ b/hjq/hjq.cabal
@@ -62,6 +62,7 @@ test-suite hjq-test
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      HUnit
+    , base >=4.7 && <5
     , hjq
   default-language: Haskell2010
