--- a/hjq/stack.yaml
+++ b/hjq/stack.yaml
@@ -17,8 +17,13 @@
 #
 # snapshot: ./custom-snapshot.yaml
 # snapshot: https://example.com/snapshots/2024-01-01.yaml
-snapshot:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/24/27.yaml
+# resolver: lts-22.40
+resolver: lts-24.27
+system-ghc: true
+install-ghc: false
+
+# snapshot:
+#  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/24/27.yaml
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
