--- a/hjq/hjq.cabal
+++ b/hjq/hjq.cabal
@@ -38,8 +38,11 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       aeson
+    , aeson-pretty
     , attoparsec
     , base >=4.7 && <5
+    , bytestring
+    , errors
     , lens
     , lens-aeson
     , text
@@ -58,8 +61,11 @@ executable hjq-exe
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
+    , aeson-pretty
     , attoparsec
     , base >=4.7 && <5
+    , bytestring
+    , errors
     , hjq
     , lens
     , lens-aeson
@@ -81,8 +87,11 @@ test-suite hjq-test
   build-depends:
       HUnit
     , aeson
+    , aeson-pretty
     , attoparsec
     , base >=4.7 && <5
+    , bytestring
+    , errors
     , hjq
     , lens
     , lens-aeson
